# vitalium-verb

./: Cargo.toml  README.md  bundler.toml  rust-toolchain.toml
.github/workflows/: build.yml
src/: editor.rs  lib.rs  params.rs  styles.css
vitalium_verb_dsp/: Cargo.toml  README.md
vitalium_verb_dsp/src/: lib.rs  matrix.rs  one_pole_filter.rs  params.rs  poly_utils.rs  reverb.rs  stereo_memory.rs  utils.rs
vitalium_verb_dsp/src/tests/: mod.rs
vitalium_verb_dsp_zig/: Cargo.toml  build.rs
vitalium_verb_dsp_zig/src/: lib.rs  main.zig
